@@ -50,13 +50,12 @@ adicionar sistema de colisão que permite diagonais
 =========================================================================================================================================
 VERSION 2.0.0 BETA 1
 =========================================================================================================================================
-- in-game manual
+- está aparecendo o jogador após a explosão quando morre e antes de sumir a tela (deve ser no fade out?)
 
-- mudar audio enabled/disabled para uma única opção (on/off)
 
 - mudar opções de escala para ser uma única opção (unscaled, scaled, scale2x)
 
-- opções leva stage e quita game só devem aparecer quando as opções forem invodadas por dentro do menu de armas
+- opções leave stage e quit game só devem aparecer quando as opções forem invodadas por dentro do menu de armas
 
 - ANDROID/PS2/PSP: new icon/background images
 
@@ -79,9 +78,9 @@ VERSION 2.0.0 BETA 1
 ##################################
              DONE
 ##################################
-- não deve fazer som de pulo ao finalizar um teleporte
-- a flecha de diálogo só deve aparecer quando todas as frases forem escritas
-
+- colocar no manual características de cada personagem (pulo carregado, slide, etc)
+- colocar no manual, dica que dash + pulo vai mais longe
+- mudar audio enabled/disabled para uma única opção (on/off)
 
 
 =========================================================================================================================================
