@@ -22,6 +22,7 @@ public:
  */
     option_picker(bool draw_border, st_position pos, std::vector<st_menu_option> options, bool show_return);
     option_picker(bool draw_border, st_position pos, std::vector<std::string> options, bool show_return);
+    void change_option_label(int n, std::string label);
     Sint8 pick();
 
 
